--- a/index.html
+++ b/index.html
@@ -72,21 +72,21 @@
           <div class="apart__photo"><img class="apart__photo-top-left" src="./images/Layer 46.png" alt=""></div>
           <div class="apart__photo"><img class="apart__photo-top-right" src="./images/Layer 47.png" alt=""></div>
         </div>
-        <h2>Marina Palms / <span class="apart__adress">North Miami Beach, FL 33162</span></h2>
+        <h2>Marina Palms / <a href="#" class="apart__adress">North Miami Beach, FL 33162</a></h2>
       </div>
       <div class="apart">
         <div class="apart__photos">
           <div class="apart__photo"><img class="apart__photo-mid-left" src="./images/Layer 48.png" alt=""></div>
           <div class="apart__photo"><img class="apart__photo-mid-right" src="./images/Layer 50.png" alt=""></div>
         </div>
-        <h2>Edition Residens / <span class="apart__adress">Miami Beach, FL 33139</span></h2>
+        <h2>Edition Residens / <a href="#" class="apart__adress">Miami Beach, FL 33139</a></h2>
       </div>
       <div class="apart">
         <div class="apart__photos">
           <div class="apart__photo"><img class="apart__photo-bot-left" src="./images/Layer 49.png" alt=""></div>
           <div class="apart__photo"><img class="apart__photo-bot-right" src="./images/Layer 51.png" alt=""></div>
         </div>
-        <h2>Faena House / <span class="apart__adress">Miami Beach, FL 33140</span></h2>
+        <h2>Faena House / <a href="#" class="apart__adress">Miami Beach, FL 33140</a></h2>
       </div>
       <a href="#" class="button button__inline">View all</a>
     </div>
